--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     cache: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/hotel2?useUnicode=true&characterEncodeing=utf-8&serverTimezone=Hongkong
+    url: jdbc:mysql://localhost:3306/hotel?useUnicode=true&characterEncodeing=utf-8&serverTimezone=Hongkong
     username: root
     password: qwe123
   jpa:
